# beauty-master

./: .gitignore  Dockerfile  Makefile  celerybeat-schedule  docker-compose.yml  pyproject.toml
app/: celery.py  settings.py  urls.py
booking/: admin.py  apps.py  models.py  signals.py  tasks.py
booking/migrations/: 0001_initial.py  0002_daysoff.py  0002_remove_daysoff_daysoff_end_after_start_and_more.py
booking/services/: scheduler.py
booking/tests/: test_scheduler_services.py
config/: settings.py
docker/: entrypoint.sh
notifications/: admin.py  dispatcher.py  models.py  services.py  tasks.py
notifications/migrations/: 0001_initial.py  0002_outboxevent_task_id.py  0003_outboxevent_booking_id_and_more.py
notifications/services/: email_service.py  telegram_service.py
notifications/templates/email/: booking_canceled.html  booking_confirmed.html  client_reminder.html
notifications/templates/subject/: booking_confirmed_subject.txt  client_reminder_subject.txt
notifications/templates/telegram/: booking_confirmed.html
services/: admin.py  models.py
services/migrations/: 0001_initial.py  0002_servicecategory_image.py
