[tool.poetry]
name = "beauty-master"
version = "0.1.0"
description = ""
authors = ["Mark Semenov <semenovmark07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
pillow = "^11.3.0"
celery = "^5.5.3"
psycopg = {extras = ["binary"], version = "^3.2.10"}
django-environ = "^0.12.0"
redis = "^6.4.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
